Feature/oauth copyfromurl (#22086)
* Set up STG78 branch (#21634)

* Generated off latest version of blob swagger (#21644)

* swagger generation and public API overloads

* blob clients obey new generation

* minor changes to bearer token logic

* TEST WORKING

* extra testing

* ported oauthcopy source to blobs

* options API changes and docstrings

* fixed constructor issues

* fix missed source auth misses

* script tags on pom

* removes arg checks in option model constructors

rerecorded tests

* pom fix

* fix misnamed page blob tests

* Test fixes

adds missing recording.
extra playback logic for oauth tokens that should fix a CI-specific
issue.

* fixed pom script comment

* downgrade some depenency verions

* rerecord sas tests

* snippets and checkstyle

* rerecorded tests

fixed recording infra for file share tests

* test fixes

* rerecorded versioning tests

* HttpAuthorization added to core-experimental

azure-storage-blob and azure-storage-file-share now depend on
core-experimental for new class and updated their APIs to use the new
class.

* refactored options type names

* Reenabled quick query parquet support (#21785)

* reidentified samples for options class name change

* Implemented Immutable Storage with Versioning (#21718)

* File listing v2 (#21720)

* swagger generation and hookup

regenerated files swagger for listing
hooked up generated and handwritten models
expanded client API to support new models

* testing and fixes

expanded test parameters for file listing.
swagger transform added.

* rerecorded file listing test

* more testing

also fixed a method name casing

* docstrings and samples

* checkstyle

* reverted primative boolean extended info arg

REST api accepts true or an absence of value. Alligning with .NET for
now on Boolean vs boolean.

* checkpoint

* pr feedback

* misused variable fix

* fixed test

* send nothing, not 